# kaya

./: .prettierignore  AGENTS.md  CHANGELOG.md  README.md  package.json
.github/: cla-signatures.json  dependabot.yml
.github/workflows/: ci.yml  cla.yml  nightly.yml  pr-title.yml  release.yml  welcome.yml
apps/desktop/: package.json  rsbuild.config.ts
apps/desktop/src/: App.tsx  AppContent.tsx  useAppContentState.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/scripts/: pytorch_inference.py
apps/desktop/src-tauri/src/: commands.rs  lib.rs  onnx_engine.rs  pytorch_engine.rs
apps/web/: package.json  rsbuild.config.ts
apps/web/src/: App.tsx  AppContent.tsx  WebUpdater.tsx
docs/: AI_PERFORMANCE.md  DEVELOPER_GUIDE.md  I18N.md  PROJECT_STATE.md
scripts/: convert-model-webgpu.py  generate-updater-json.ts
